--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" type="text/css" media="screen" href="../src/App.css" />
+    <script src="https://kit.fontawesome.com/76088dd324.js" crossorigin="anonymous"></script>
     <title>CdigitalClone</title>
   </head>
   <body>
