--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=Lobster&family=Satisfy&family=Shippori+Antique&display=swap"
+      rel="stylesheet"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -11,8 +17,16 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="stylesheet" type="text/css" media="screen" href="../src/App.css" />
-    <script src="https://kit.fontawesome.com/76088dd324.js" crossorigin="anonymous"></script>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      media="screen"
+      href="../src/App.css"
+    />
+    <script
+      src="https://kit.fontawesome.com/76088dd324.js"
+      crossorigin="anonymous"
+    ></script>
     <title>CdigitalClone</title>
   </head>
   <body>
