--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
       href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=Lobster&family=Satisfy&family=Shippori+Antique&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;1,100&display=swap"
+      rel="stylesheet"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
