--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,12 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+
+    <!-- fuente material UI -->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+    />
     <script
       src="https://kit.fontawesome.com/76088dd324.js"
       crossorigin="anonymous"
