--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="https://www.cotodigital3.com.ar/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -41,7 +41,7 @@
       src="https://kit.fontawesome.com/76088dd324.js"
       crossorigin="anonymous"
     ></script>
-    <title>CdigitalClone</title>
+    <title>CotoDigiclon</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
