--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
       src="https://kit.fontawesome.com/76088dd324.js"
       crossorigin="anonymous"
     ></script>
-    <title>CotoDigiclon</title>
+    <title>CotDigitalClon</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
